--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "csv-stringify": "^6.4.6",
     "date-fns": "^3.0.6",
     "date-fns-tz": "^3.2.0",
+    "dotenv": "^17.3.1",
     "iconv-lite": "^0.7.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^4.1.0",
