--- a/.env.local.example
+++ b/.env.local.example
@@ -9,5 +9,9 @@ CLOUDINARY_API_SECRET=your_api_secret
 # JWT
 JWT_SECRET=your_very_long_random_secret_minimum_32_chars
 
+# Telegram Bot
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_from_botfather
+
 # App
 NODE_ENV=development
+NEXT_PUBLIC_APP_URL=https://itrcrm.vercel.app
